[gd_scene load_steps=14 format=2]

[ext_resource path="res://Excavator.gd" type="Script" id=1]
[ext_resource path="res://MoonBlockMaterial.tres" type="Material" id=2]
[ext_resource path="res://Theme.tres" type="Theme" id=3]
[ext_resource path="res://Audio/move.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/scoop.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/drop.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/level-complete.wav" type="AudioStream" id=7]
[ext_resource path="res://Excavator.glb" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=14]
extents = Vector3( 0.45, 0.5, 0.45 )

[sub_resource type="Animation" id=18]
resource_name = "Drop"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Excavator/Body/Arm1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -10, 0, 0 ), Vector3( -30, 0, 0 ), Vector3( 5, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Excavator/Body/Arm1/Arm2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 10, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Excavator/Body/Arm1/Arm2/Scoop:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -120, 0, 0 ), Vector3( -120, 0, 0 ), Vector3( -45, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Excavator/Body/Arm1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Excavator/Body/Arm1/Arm2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Excavator/Body/Arm1/Arm2/Scoop:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "ScoopDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Excavator/Body/Arm1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -45, 0, 0 ), Vector3( -90, 0, 0 ), Vector3( -10, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Excavator/Body/Arm1/Arm2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 15, 0, 0 ), Vector3( 15, 0, 0 ), Vector3( -15, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Excavator/Body/Arm1/Arm2/Scoop:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -30, 0, 0 ), Vector3( -15, 0, 0 ), Vector3( -90, 0, 0 ), Vector3( -120, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "ScoopForward"
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Excavator/Body/Arm1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -30, 0, 0 ), Vector3( -60, 0, 0 ), Vector3( 5, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Excavator/Body/Arm1/Arm2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 10, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Excavator/Body/Arm1/Arm2/Scoop:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -45, 0, 0 ), Vector3( -120, 0, 0 ), Vector3( -120, 0, 0 ) ]
}

[node name="Excavator" type="Spatial"]
script = ExtResource( 1 )

[node name="Body" type="KinematicBody" parent="." groups=["excavator_body", "liftable"]]

[node name="Excavator" parent="Body" instance=ExtResource( 8 )]

[node name="ScoopContents" parent="Body/Excavator/Body/Arm1/Arm2/Scoop" index="0"]
material/0 = ExtResource( 2 )

[node name="BodyRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
cast_to = Vector3( 0, 0, -1 )

[node name="FloorRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1 )

[node name="ArmRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
cast_to = Vector3( 0, 0, -1 )

[node name="DropRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="ArrowRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5 )
enabled = true
cast_to = Vector3( 0, 0, -0.5 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="DropTarget" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="BodyCollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 14 )

[node name="ScoopForwardRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 2

[node name="ScoopDownRayCast" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -1 )
enabled = true
collision_mask = 2

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.438371, 0.898794, 0, -0.898794, 0.438371, 0, 10, 4 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ScoopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="DropSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="LevelCompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "CelebrationMusic"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Drop = SubResource( 18 )
anims/RESET = SubResource( 15 )
anims/ScoopDown = SubResource( 17 )
anims/ScoopForward = SubResource( 16 )

[node name="PauseMenu" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="TextureRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 0.501961 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 24

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_right = 224.0
margin_bottom = 49.0
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 73.0
margin_right = 224.0
margin_bottom = 122.0
text = "Restart Level"

[node name="ExitButton" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 146.0
margin_right = 224.0
margin_bottom = 195.0
text = "Exit to Level Select"

[editable path="Body/Excavator"]
